# kBase

./: .env.example  .gitignore  Functional_Specification.md  Implementation_Plan.md  MVP_Implementation_Plan.md  README.md  pyproject.toml
config/: config.yaml
src/: main.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  config.py
src/llm/: __init__.py  base.py  openai_client.py
src/memory/: __init__.py  conversation_buffer.py
src/rag/: __init__.py  document_processor.py  embeddings.py  vector_store.py
tests/: test_llm.py  test_rag.py
